--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -96,8 +96,10 @@
     
     \subsection{Universes}
     A universe is the data structure that represents the englobing container for a world and a collection of characters.
+    \lipsum[1]
     
     \subsection{Characters}
+    \lipsum[1]
     
 	\section{Design}
 	This section will focus on detailing the way this application is designed and how the features were implemented.
