--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -184,7 +184,7 @@
 	
 	\subsection{Pagination}
 	
-	\figuremacro{h}{Pagination}{Pagination system}{}{0.6}
+	\figuremacro{h}{Pagination}{Pagination system}{}{0.2}
 	
 	On the catalogue there are many entries and displaying all of them in a single page would make it really long and annoying to read so I created a pagination system to split the content into pages.
 	
@@ -194,19 +194,34 @@
 	
 	\subsection{Logging}
 	
+	\begin{lstlisting}[caption = A line of the log file]
+	INFO | 2016-10-26 11:18:41,173 | main | logRequest | GET: http://localhost:5000/universes\end{lstlisting}
+	
+	The application has a logging system that keeps track of the requests and registers critical steps of processing. Each error is saved in order to be able to ensure that the application is working properly at all times.
+	
 	\subsection{Graphic style}
+	A consequent amount of time has been spent on trying to make the application look nice and being user-friendly. I tried my best to make sure that everything was intuitive and easy to use.
+	
+	I have a followed some common guides-lines through the pages and did my best to keep the same colour scheme and to have the items ordered the same way on all pages .
 	
 	\section{Enhancements}
+	Some of these enhancements are available on github in the issue tracker as features.
 	\begin{description}
 		\item[A) Creation and Edition] One of the first things that should be implemented if this project was to be really used would be to provide the ability to create new entries in the catalogue and the possibility to edit them afterwards.
 		\item[B) Featured items on the home page] The home page is currently quite empty but could show a list of the last items that were added, the one that are the most viewed etc ...
 		\item[C) More user-friendly search system] It is currently not as easy to use the search system that I wanted it to be. For example we could provide an auto-complete search for the tags (in Javascript).
 		\item[D) Graphic style re-use] In the universes or characters list we should re-use the graphic style of the links in the details page. 
 		\item[E) Optimize load time] When displaying a list all entries are processed but only 5 at most are shown by page. To win some loading time we could process only the entries that would be displayed in the end. 
+		\item[F) Accounts and deletion] It is possible that we may want to delete an entry. To do so it would be necessary to create an account system to only allow this critical action to administrators.
+		\item[G) Unit tests] To make sure that the app always works when used in production we should redact en run some unit tests. So that the application is in a continuous integration.
+		\item[H) Medias details] The current system to show media related to a universe is not really welcoming. To make it more friendly we could shows those information on a separate page and provide more details on each media, like the name, author(s) and release dates.
 	\end{description}
 	
 	\section{Evaluation}
+	In this section we will make a critical self-assessment of the result and current state of this project. 
+	
 	\subsection{Advantages}
+	I consider that the main advantage of this application is its 
 	
 	\subsection{Disadvantages}
 	// Cf. to Enhancements //
@@ -219,6 +234,6 @@
 	\section{Ressources}
 	
 	\section{Eratum}
-	As an International student I had to pay a specific attention to the redaction of this report. Could you please give me some feedback on the way it is redacted and the weaknesses of my written expression.
+	As an International student I had to pay a specific attention to the redaction of this report. Could you please give me some feedback on the way it is redacted and the weaknesses in my written expression.
 		
 \end{document}
