--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -94,11 +94,11 @@
     
     At last I tried to give the application a specific graphic style that unified through all the pages.
     
-    \subsection{Universes}
+    \subsection{Universes}  % TODO
     A universe is the data structure that represents the englobing container for a world and a collection of characters.
     \lipsum[1]
     
-    \subsection{Characters}
+    \subsection{Characters}  % TODO
     \lipsum[1]
     
 	\section{Design}
@@ -215,23 +215,28 @@
 		\item[F) Accounts and deletion] It is possible that we may want to delete an entry. To do so it would be necessary to create an account system to only allow this critical action to administrators.
 		\item[G) Unit tests] To make sure that the app always works when used in production we should redact en run some unit tests. So that the application is in a continuous integration.
 		\item[H) Medias details] The current system to show media related to a universe is not really welcoming. To make it more friendly we could shows those information on a separate page and provide more details on each media, like the name, author(s) and release dates.
+		\item[I) Translations] Use different templates depending on the user locale variable. Using babel maybe ?
 	\end{description}
 	
 	\section{Evaluation}
 	In this section we will make a critical self-assessment of the result and current state of this project. 
 	
-	\subsection{Advantages}
-	I consider that the main advantage of this application is its 
+	\subsection{Advantages} % TODO
+	I consider that the main advantage of this application is its good appearance. As described in the section 2.9 I really did my best to have a good user interface. The few features that are implemented are fully finished. I preferred to make sure that the thing I had done worked perfectly well before done anything else.
 	
-	\subsection{Disadvantages}
-	// Cf. to Enhancements //
+	\subsection{Disadvantages} % TODO
+	On another hand this application remains quite basic and could provide a lot more features. As the Enhancements sections shows there is a lot more that could have been done.
+	
+	If I had more time and managed it's use more wisely. I probably spent too much time trying to get the app look good but which gave me less time to implement new functionalities.
+	
+	
 
-	\section{Development process}
-	\subsection{Difficulties}
+	\section{Development process} 
+	\subsection{Difficulties}  % TODO
 	
-	\subsection{Things I learned}
+	\subsection{Things I learned}  % TODO
 	
-	\section{Ressources}
+	\section{Ressources}  % TODO
 	
 	\section{Eratum}
 	As an International student I had to pay a specific attention to the redaction of this report. Could you please give me some feedback on the way it is redacted and the weaknesses in my written expression.
