--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -104,7 +104,7 @@
 	\section{Design}
 	This section will focus on detailing the way this application is designed and how the features were implemented.
 	
-	\figuremacro{h}{nav}{Navigation}{ - The navigation links}{0.6}
+	\figuremacro{h}{nav}{Navigation}{ - The navigation links}{0.4}
 	
 	This figures represents the main pages available.
 	
@@ -174,9 +174,9 @@
 	
 	\subsection{Search system}
 	
-	\figuremacro{h}{SearchSystem}{Search bar}{}{0.6}
-	
 	On the list of entries you can search for a specific entry. On the previous figure we can see that the results are filtered to only show entries of the "Doctor Who" universe and having the "Human" tag. We can also search for text in the name or in the short description.
+	
+	\figuremacro{h}{SearchSystem}{Search bar}{}{0.8}
 	
 	Each filter can be combined with others. For example on the figure we use both the tag and universe filter. The last button (the cross) allows the user to clear all filters.
 	
@@ -231,7 +231,7 @@
 	
 	
 
-	\section{Development process} 
+	\section{Conclusion} 
 	\subsection{Difficulties}  % TODO
 	
 	\subsection{Things I learned}  % TODO
